added crud with sql

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
     <%= link_to 'Main Page', boards_path %>
     <div class="ui right inverted menu">
         <% if current_user %>
-            <%= link_to "Logout", destroy_user_session_path %>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         <% else %>
             <%= link_to 'Register', new_user_registration_path %>  | 
             <%= link_to 'Login', new_user_session_path %>
